BUG FIXED:  Landing page is not responsive on mobile device but it is in Desktop resize.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -937,10 +937,7 @@ li > a {
 }
 
 @media (min-width: 990px ) and (max-width: 1220px) {
-    #amnesty-logo a img {
-        margin-left: 15px !important;
-        padding-right: 15px !important;
-    }
+
 
 }
 
