--- a/static/landing_assets/css/rinjani.css
+++ b/static/landing_assets/css/rinjani.css
@@ -66,10 +66,6 @@ h5,
 h6 {
   margin: 0 0 20px;
 }
-img {
-  max-width: 100%;
-  height: auto;
-}
 p {
   font-size: 15px;
   font-weight: 400;
